@@ -1,3 +1,8 @@
+2007-08-23  Maynard Johnson <maynardj@us.ibm.com>
+
+	* daemon/opd_anon.c: Make anonymous sample recording
+	  work with 32-bit OProfile and 64-bit anonymous code
+
 2007-08-14  John Levon  <levon@movementarian.org>
 
 	* doc/oprofile.xml:
